grammar.js
    source_file: $ => seq(
      seq(optional($.use_stmt), repeat(choice($.provide_stmt, $.import_stmt))), 
      optional($.block),
    ),

    import_stmt: $ => choice(
      seq("include", $.import_source),
      seq(
        "include",
        "from",
        $.module_ref,
        ":",
        optional(
          seq(
            $.include_spec,
            repeat(seq(",", $.include_spec)),
            optional(","),
          ),
        ),
        "end",
      ),
      seq("import", $.import_source, "as", $.name),
      seq("import", $.comma_names, "from", $.import_source),),
    import_source: $ => choice($.import_special, $.import_name),
    import_special: $ => seq(
      $.name, 
      $._paren_no_space, 
      $.string, 
      repeat(seq(",", $.string)), 
      ")"
    ),
    import_name: $ => $.name,

    provide_stmt: $ => choice(
      $.provide_vals_stmt,
      $.provide_types_stmt,
      $.provide_block,
    ),
    provide_block: $ => choice(
      seq(
        "provide:", 
        optional(
          seq($.provide_spec, repeat(seq(",", $.provide_spec)), optional(","))
        ),
        "end",
      ),
      seq(
        "provide", 
        "from", 
        $.module_ref, 
        ":",
        optional(
          seq($.provide_spec, repeat(seq(",", $.provide_spec)), optional(","))
        ),
        "end",
      ),
    ),

    provide_spec: $ => choice(
      $.provide_name_spec,
      $.provide_type_spec,
      $.provide_data_spec,
      $.provide_module_spec,
    ),

    data_name_spec: $ => choice("*", $.module_ref),

    provide_data_spec: $ => seq("data", $.data_name_spec, optional($.hiding_spec)),
    module_ref: $ => seq(repeat(seq($.name, ".")), $.name),

    comma_names: $ => seq($.name, repeat(seq(",", $.name))), 

    block: $ => repeat1($._stmt),

    _stmt: $ => choice(
      $.type_expr,
      $.newtype_expr,
      $.spy_stmt,
      $.let_expr,
      $.fun_expr,
      $.data_expr,
      $.when_expr,
      $.var_expr,
      $.rec_expr,
      $.assign_expr,
      $.check_test,
      $.check_expr,
      $.contract_stmt,
      $._binop_expr
    ),

    type_expr: $ => seq("type", $.name, optional($.ty_params), "=", $.ann),
    let_expr: $ => seq($.toplevel_binding, "=", $._binop_expr),
    binding: $ => choice($.name_binding, $.tuple_binding),

    name_binding: $ => prec(1, seq(
      optional("shadow"), 
      $.name, 
      optional(seq("::", $.ann)),
    )),

    toplevel_binding: $ => $.binding,
    fun_expr: $ => seq(
      "fun", 
      $.name, 
      $.fun_header, 
      choice("block:", ":"),
      optional($.doc_string), 
      optional($.block),
      optional($.where_clause),
      "end",
    ),
    fun_header: $ => seq(optional($.ty_params), $.args, optional($.return_ann)), // bad-arg choice elided
    ty_params: $ => seq("<", $.comma_names, ">"),
    args: $ => seq(
      choice($._paren_no_space, $._paren_after_brace),
      optional(seq($.binding, repeat(seq(",", $.binding)))),
      ")"
    ),
    data_expr: $ => seq(
      "data", 
      $.name,
      optional($.ty_params), 
      ":",
      optional($.first_data_variant),
      repeat($.data_variant),
      optional($.data_sharing), 
      optional($.where_clause),
      "end",
    ),
    variant_constructor: $ => seq($.name, $.variant_members),
    data_variant: $ => choice(
      seq("|", $.variant_constructor, optional($.data_with)),
      seq("|", $.name, optional($.data_with)),
    ),
    variant_members: $ => seq(
      $._paren_no_space,
      optional(seq($.variant_member, repeat(seq(",", $.variant_member)))),
      ")"
    ), 
    variant_member: $ => seq(optional("ref"), $.binding),
    _binop_expr: $ => prec.left(PREC.Binary, 
      seq($._expr, repeat(seq($.binop, $._expr)))
    ),

    // TODO: these might need the scanner support
    binop: $ => choice(
      "+", "-", "*", "/", "<=", ">=", "==", "<=>", "=~", "<>",
      "<", ">", "and", "or", "^"
    ),

    _expr: $ => choice(
      $.prim_expr, 
      $.id_expr, 
      $.prim_expr, 
      $.lambda_expr, 
      $.method_expr,
      $.app_expr,
      $.obj_expr,
      $.tuple_expr,
      $.tuple_get,
      $.dot_expr,
      $.template_expr,
      $.bracket_expr,
      $.get_bang_expr,
      $.update_expr,
      $.extend_expr,
      $.if_expr,
      $.if_pipe_expr, 
      $.cases_expr,
      $.for_expr,
      $.user_block_expr,
      $.inst_expr,
      $.multi_let_expr, 
      $.letrec_expr,
      $.type_let_expr,
      $.construct_expr,
      $.table_select,
      $.table_extend, 
      $.table_filter,
      $.table_order,
      $.table_extract,
      $.table_update,
      $.table_expr,
      $.load_table_expr,
      $.reactor_expr,
    ),

    id_expr: $ => alias($.name, $.id_expr), 

    prim_expr: $ => choice(
      $.num_expr, 
      $.frac_expr, 
      $.rfrac_expr, 
      $.bool_expr,
      $.string_expr
    ),

    num_expr: $ => $.number,
    string_expr: $ => $.string, // TODO: should this be an alias?

    obj_fields: $ => seq(
      $.obj_field, 
      repeat(seq(",", $.obj_field)), 
      optional(",")
    ),
    obj_field: $ => choice(
      seq($.key, ":", $._binop_expr),
      seq("ref", $.key, optional(seq("::", $.ann)), ":", $._binop_expr),
      seq(
        "method", 
        $.key, 
        $.fun_header, 
        choice("block:", ":"),
        optional($.doc_string),
        optional($.block),
        optional($.where_clause),
        "end",
      ),
    ),

    key: $ => $.name,

    construct_expr: $ => seq(
      "[",
      optional($.construct_modifier),
      $._binop_expr,
      ":",
      // optional($.trailing_comma_binops),
      optional(seq(
        $._binop_expr,
        repeat(seq(",", $._binop_expr)),
        optional(",")
      )),
      "]"
    ),
    table_expr: $ => seq(
      "table:", optional($.table_headers), optional($.table_rows), "end"
    ),
    table_headers: $ => seq(
      repeat($.list_table_header), 
      $.table_header
    ),
    list_table_header: $ => seq($.table_header, ","),
    table_header: $ => seq($.name, optional(seq("::", $.ann))),
    table_rows: $ => repeat1($.table_row),
    table_row: $ => seq("row:", optional($.table_items)),
    table_items: $ => seq(repeat($.list_table_item), $._binop_expr),
    list_table_item: $ => seq($._binop_expr, ","),

    // TODO: see the note in the bnf, can we handle this better in tree-sitter?
    if_expr: $ => seq(
      "if", 
      $._binop_expr, 
      choice("block:", ":"),
      optional($.block),
      repeat($.else_if),
      optional(seq("else:", optional($.block))),
      "end"
    ),
    cases_binding: $ => seq(optional("ref"), $.binding),
    cases_args: $ => seq(
      $._paren_no_space, 
      optional(seq($.cases_binding, repeat(seq(",", $.cases_binding)), ")"))
    ),
    cases_expr: $ => seq(
      "cases",
      choice($._paren_space, $._paren_no_space),
      $.ann,
      ")",
      $._binop_expr,
      choice("block:", ":"),
      repeat($.cases_branch),
      optional(seq("|", "else", "=>", optional($.block))),
      "end",
    ),
    cases_branch: $ => seq("|", $.name, optional($.cases_args), "=>", optional($.block)),

    column_order: $ => seq($.name, choice("ascending", "descending")),
    table_select: $ => seq(
      "select", $.name, repeat(seq(",", $.name)), "from", $._expr, "end",
    ),
    table_filter: $ => seq(
      "sieve", 
      $._expr, 
      optional(seq("using", $.binding, repeat(seq(",", $.binding)))),
      ":", 
      $._binop_expr, 
      "end",
    ),
    table_order: $ => seq(
      "order", 
      $._expr, 
      ":", 
      $.column_order, 
      repeat(seq(",", $.column_order)), 
      "end",
    ),
    table_extract: $ => seq(
      "extract", $.name, "from", $._expr, "end",
    ),
    table_update: $ => seq(
      "transform", 
      $._expr,
      optional(seq("using", $.binding, repeat(seq(",", $.binding)))),
      ":", 
      $.obj_fields,
      "end",
    ),
    table_extend: $ => seq(
      "extend", 
      $._expr,
      optional(seq("using", $.binding, repeat(seq(",", $.binding)))),
      ":",
      $.table_extend_fields,
      "end",
    ),
    table_extend_fields: $ => seq(
      repeat($.list_table_extend_field), 
      $.table_extend_field,
      optional(","),
    ),
    table_extend_field: $ => choice(
      seq($.key, optional(seq("::", $.ann)), ":", $._binop_expr),
      seq($.key, optional(seq("::", $.ann)), ":", $._expr, "of", $.name),
    ),
    
    ann: $ => choice(
      $.name_ann, 
      $.record_ann,
      $.arrow_ann, 
      $.app_ann, 
      $.pred_ann, 
      $.dot_ann, 
      $.tuple_ann 
    ),

    name_ann: $ => $.name, // TODO: should this be an alias?
    arrow_ann_args: $ => choice(
      $.comma_anns,
      seq(
        choice($._paren_space, $._paren_no_space, $._paren_after_brace),
        $.comma_ann_field,
        ")",
      ),
    ),
    arrow_ann: $ => seq(
      choice($._paren_space, $._paren_no_space, $._paren_after_brace),
      optional($.arrow_ann_args),
      "->",
      $.ann,
      ")",
    ),

    app_ann: $ => seq(choice($.name_ann, $.dot_ann), "<", $.comma_anns, ">"),

    comma_anns: $ => seq($.ann, repeat(seq(",", $.ann))),

    number: $ => /[-+]?[0-9]+(?:\.[0-9]+)?(?:[eE][-+]?[0-9]+)?/,

    name: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/, // TODO: should these matter?

    string: $ => choice(
      seq(
        '"',
        repeat(choice(
          $.escape_sequence, 
          alias($.unescaped_double_string_fragment, $.string_content)
        )),
        token.immediate('"'),
      ),
      seq(
        "'",
        repeat(choice(
          $.escape_sequence, 
          alias($.unescaped_single_string_fragment, $.string_content)
        )),
        token.immediate("'"),
      ),
      // TODO: multiline string
    ),

    block_comment: $ => token(prec(1, seq("#|", repeat(choice(/[^|]/, /\|[^#]/)), "|#"))),
  },
});
